# backlog-switcher

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/bswitch-setup/: SKILL.md
docs/: api.md  design.md
docs/adr/: 001-rate-limit-aware-permission-switching.md  002-release-default-state-based-removal.md  003-optional-virtual-user-configuration.md  004-1password-op-read-over-op-run.md  005-bswitch-check-for-api-key-integrity.md  006-check-fingerprint-cache-over-op-read.md
docs/examples/: bswitch-statusline.js
src/bswitch/: __init__.py  __main__.py  api.py  cli.py  config.py  keys.py  models.py  shell.py  state.py  switcher.py  ui.py
tests/e2e/: conftest.py  test_e2e.py
tests/unit/: conftest.py  test_api.py  test_cli.py  test_config.py  test_keys.py  test_shell.py  test_state.py  test_switcher.py
