[project]
name = "bswitch"
version = "0.1.0"
description = "Backlog権限スイッチャーCLI: 仮想ユーザーをプロジェクトに最小権限で参加させる"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "InquirerPy>=0.3.4",
]

[project.scripts]
bswitch = "bswitch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bswitch"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
